--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:background="@color/colorPrimary"
+        android:background="?colorPrimary"
         android:orientation="vertical">
 
         <TextView
@@ -21,7 +21,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/new_task"
-            android:textColor="@color/colorAccent"
+            android:textColor="?colorAccent"
             android:textSize="24sp"
             android:textStyle="bold" />
 
@@ -48,8 +48,6 @@
                     android:inputType="textMultiLine"
                     android:maxLines="10"
                     android:padding="8dp"
-                    android:textColor="@color/colorGreyLight"
-                    android:textColorHint="@color/colorGreyLight"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -123,6 +121,7 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
+        android:tint="?colorPrimary"
         app:backgroundTint="?colorAccent"
         app:fabSize="mini"
         app:srcCompat="@drawable/ic_arrow_back_white" />
