--- a/app/src/main/res/layout/fragment_font_size.xml
+++ b/app/src/main/res/layout/fragment_font_size.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="?colorPrimary">
 
     <TextView
         android:id="@+id/titleView"
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/font_size"
-        android:textColor="@color/colorAccent"
+        android:textColor="?colorAccent"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -38,7 +38,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="56dp"
         android:layout_marginTop="56dp"
-        app:backgroundColor="@color/colorAccent"
+        app:backgroundColor="?colorAccent"
         app:cornerRadius="20"
         app:defaultValue="11"
         app:imageEnabled="false"
@@ -46,7 +46,7 @@
         app:progressColor="@color/colorGreen"
         app:step="1"
         app:textBottomPadding="20"
-        app:textColor="#FFFFFF"
+        app:textColor="?colorPrimary"
         app:textEnabled="true"
         app:textSize="20sp"
         app:touchDisabled="true" />
@@ -59,6 +59,7 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
+        android:tint="?colorPrimary"
         app:backgroundTint="?colorAccent"
         app:fabSize="mini"
         app:srcCompat="@drawable/ic_arrow_back_white" />
