--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -11,7 +11,6 @@
         android:layout_margin="8dp"
         app:cardUseCompatPadding="true"
         app:cardElevation="1dp"
-        app:cardBackgroundColor="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/groupTitleView">
@@ -29,6 +28,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
+                android:tint="?colorAccent"
                 app:srcCompat="@drawable/ic_add_circle" />
 
             <LinearLayout
