--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginTop="4dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
@@ -24,9 +24,9 @@
         android:layout_marginStart="16dp"
         android:layout_weight="1"
         android:maxLines="2"
-        tools:text="Hello"
-        android:textColor="@color/colorAccent"
-        android:textSize="14sp" />
+        android:textColor="?colorAccent"
+        android:textSize="14sp"
+        tools:text="Hello" />
 
     <ImageView
         android:id="@+id/favouriteView"
