--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ffffff</color>
-    <color name="colorPrimaryDark">#f3f3f3</color>
-    <color name="colorAccent">#263238</color>
+    <color name="colorPrimaryDark">#c7c7c7</color>
+    <color name="colorAccent">#1c313a</color>
+
+    <color name="colorDarkPrimary">#212121</color>
+    <color name="colorDarkPrimaryDark">#000000</color>
+    <color name="colorDarkAccent">#eeeeee</color>
+
     <color name="black">#000000</color>
     <color name="colorGreyLight">#9facc0</color>
+
     <color name="colorRed">#FF5252</color>
     <color name="colorPink">#FF4081</color>
     <color name="colorPurple">#E040FB</color>
