--- a/app/src/main/res/layout/fragment_extra_settings.xml
+++ b/app/src/main/res/layout/fragment_extra_settings.xml
@@ -37,7 +37,7 @@
             app:switchTabs="@array/switch_states"
             app:textSize="16sp" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/groupsList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
 
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
