--- a/app/src/main/res/layout/item_group_edit.xml
+++ b/app/src/main/res/layout/item_group_edit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -42,4 +42,4 @@
             app:srcCompat="@drawable/ic_delete_forever_red" />
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
