--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -121,8 +121,7 @@
         android:layout_alignParentEnd="true"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:tint="?colorPrimary"
-        app:backgroundTint="?colorAccent"
+        app:tint="?colorPrimary"
         app:fabSize="mini"
         app:srcCompat="@drawable/ic_arrow_back_white" />
 </RelativeLayout>
