--- a/app/src/main/res/layout/fragment_backup_settings.xml
+++ b/app/src/main/res/layout/fragment_backup_settings.xml
@@ -9,10 +9,10 @@
         android:id="@+id/titleView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/backup"
         android:textColor="?colorAccent"
         android:textSize="24sp"
@@ -31,8 +31,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginEnd="24dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -48,16 +48,18 @@
                     android:id="@+id/localButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/disabled" />
+                    android:text="@string/disabled"
+                    android:textColor="?colorOnSecondary"
+                    app:backgroundTint="?colorSecondary" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -73,7 +75,9 @@
                     android:id="@+id/googleButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/disabled" />
+                    android:text="@string/disabled"
+                    android:textColor="?colorOnSecondary"
+                    app:backgroundTint="?colorSecondary" />
 
             </LinearLayout>
 
@@ -85,8 +89,8 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
         android:layout_margin="16dp"
         android:tint="?colorPrimary"
